# ytdl-api

./: config.json  main.py  pyproject.toml
routes/: download.py  search.py
